tests/toy/neg/001284_mutation.toylang
program a = { then var a : bool; } .
